--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/c493becbcf.js" crossorigin="anonymous"></script>
-    <title>Travel Agency</title>
+    <title>T I W</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
